--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 07.12.2024 07:03:38</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 07.12.2024 07:37:27</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -66,7 +66,88 @@ None
 <section id="uCejpu"></section><a href="#top">&#8635;</a><tr><th>Šalanda U Čejpů<br><a href="https://www.ucejpu.cz/salanda/index.php#denni-menu">https://www.ucejpu.cz/salanda/index.php#denni-menu</a></th></tr>
 <tr>
 <td>
-None
+<section class="daily-meals js-bookmarks-wrapper" id="daily-meals">
+<div class="inner">
+<h4 class="headline">POLEDNÍ MENU</h4>
+<div class="bookmarks cond">
+<div class="item js-bookmark">
+<a class="link js-bookmark-switcher" href="#day_23862">Pátek 06. 12.</a>
+</div>
+</div>
+<table class="list js-bookmark-block" id="day_23862">
+<tr>
+<td class="volume"></td>
+<td class="name">
+<span class="title cond">Hovězí vývar </span>
+<span class="allergen">(A: 1, 3, 7, 9)</span>
+<p class="desc">se zeleninou a nudlemi</p>
+</td>
+<td class="price cond">
+        49 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Vepřové řízečky</span>
+<span class="allergen">(A: 1, 3, 7)</span>
+<p class="desc">s vařeným bramborem a kyselou okurkou</p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Burger s trhaným kachním masem,</span>
+<span class="allergen">(A: 1, 3, 7)</span>
+<p class="desc">BBQ omáčkou a červeným zelím, hranolky </p>
+</td>
+<td class="price cond">
+        179 Kč    </td>
+</tr>
+<tr>
+<td class="volume">1ks</td>
+<td class="name">
+<span class="title cond">Plněná tortilla kuřecím masem a zeleninou, </span>
+<span class="allergen">(A: 1, 3, 7)</span>
+<p class="desc">americké brambory, pikantní dip</p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">1ks</td>
+<td class="name">
+<span class="title cond">Grilovaný hermelín </span>
+<span class="allergen">(A: 1, 7)</span>
+<p class="desc">s brusinkovou omáčkou, míchaný zeleninový salát </p>
+</td>
+<td class="price cond">
+        159 Kč    </td>
+</tr>
+<tr>
+<td class="volume">160g</td>
+<td class="name">
+<span class="title cond">Filírované kachní prso </span>
+<span class="allergen">(A: 1, 7)</span>
+<p class="desc">s višňovou omáčkou, hranolky </p>
+</td>
+<td class="price cond">
+        189 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Filátko z lososa</span>
+<span class="allergen">(A: 1, 3, 4, 7, 9)</span>
+<p class="desc">na lůžku grilované zeleniny s citronovou omáčkou </p>
+</td>
+<td class="price cond">
+        189 Kč    </td>
+</tr>
+</table>
+</div>
+</section>
 </td>
 </tr>
 </table>
